# bit-torrent-client

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  vcpkg.json
.github/workflows/: ci.yml  cppcheck.yml
include/: BencodeParser.hpp  Handshake.hpp  Peer.hpp  TorrentFile.hpp  TorrentMetadataLoader.hpp  TrackerCommunicator.hpp
include/app/: torrent_orchestrator.hpp
src/: BencodeParser.cpp  main.cpp
src/app/: torrent_orchestrator.cpp
src/core/: BencodeParser.cpp  TorrentFile.cpp  TorrentMetadataLoader.cpp  TrackerCommunicator.cpp  torrent_metadata_loader.cpp  tracker_communicator.cpp
tests/: BencodeParserTests.cpp  ConnectionTests.cpp  bencode_parser_tests.cpp  connection_tests.cpp  torrent_metadata_loader_tests.cpp
